--- a/My first CSS/inlineColor.html
+++ b/My first CSS/inlineColor.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p style="background-color: aqua;">Asho khela hobe</p>
-    <p style="color: blue;">Dhur vallage na bal</p>
+    <p style="color: blue;">Dhur vallage na Bal</p>
 </body>
 </html>
