--- a/My first CSS/module2Practice.html
+++ b/My first CSS/module2Practice.html
@@ -29,7 +29,7 @@
             <li>Vai</li>
             <li>Bhabi</li>
             <li>Vatija</li>
-            <li>& Ami</li>
+            <li> and Ami</li>
          </ol>  
 
     </ul>
